k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: swipe-docs
spec:
  selector:
    matchLabels:
      app: swipe-docs
  replicas: 1
  template:
    metadata:
      labels:
        app: swipe-docs
    spec:
      containers:
      - name: swipe-docs
        image: "registry.digitalocean.com/team127/swipe-docs"
        ports:
          - containerPort: 80
      imagePullSecrets:
      - name: registry-team127
---
apiVersion: v1
kind: Service
metadata:
  name: swipe-docs
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: swipe-docs
