k8s/base/networking.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: swipe-docs-ingress
